--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" crossorigin href="/index.css">
 </head>
 <body>
+  <div> {{ currentY }} </div>
   <div id="app">1</div>
 </body>
 </html>
