css scroll snap

--- a/index.html
+++ b/index.html
@@ -1,14 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <script type="module" crossorigin src="/index.js"></script>
-  <link rel="stylesheet" crossorigin href="/index.css">
+  <title>Section 1 Snap Only</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      overflow-y: scroll;
+    }
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+
+    .wrapper {
+      height: 100vh;
+      overflow-y: auto;
+      scroll-snap-type: y mandatory;
+    }
+
+    .home {
+      scroll-snap-align: start;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: transparent;
+    }
+
+    .drawer {
+      scroll-snap-align: start;
+      background: red;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .handle {
+      position:relative;
+      background-color: transparent;
+      min-height: 10vw;
+      overflow: hidden;
+    }
+
+    .handle::after {
+      content: "";
+      position:absolute;
+      width: 100vw;
+      height: 10vw;
+      border-radius: 0 0 10vw 10vw;
+      box-shadow: 0 0 0 10vw black;
+    }
+
+    .sub-section {
+      min-height: 100vh;
+      font-size: 1.5rem;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .sub-section:nth-child(odd) {
+      background: #eee;
+    }
+
+    .sub-section:nth-child(even) {
+      background: #ddd;
+    }
+  </style>
 </head>
 <body>
-  <div> {{ currentY }} </div>
-  <div id="app">1</div>
+  <div class="wrapper">
+    <div class="home"></div>
+    <div class="handle"></div>
+    <div class="drawer">
+      <div class="sub-section">Section 3</div>
+      <div class="sub-section">Section 4</div>
+    </div>
+  </div>
 </body>
+
+
 </html>
